--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html> 
 	<head>
 		<title>
-			Bamboo Simulator
+			Dust Game 3.0 by DAN-SPHERE
 		</title>
 	</head>
 	<body bgcolor="#000000">
 		<script src="processing.js"></script>
 		<script src="minim.js"></script>
-		<canvas data-processing-sources="bamboo_program/bamboo_program.pde"></canvas>				
+		<canvas data-processing-sources="dust_program/dust_program.pde"></canvas>				
 	</body>
 </html>
